@@ -16,6 +16,105 @@
  */
 package org.apache.kafka.common.security.authenticator;
 
+import org.apache.kafka.clients.NetworkClient;
+import org.apache.kafka.common.KafkaException;
+import org.apache.kafka.common.config.SaslConfigs;
+import org.apache.kafka.common.config.SslClientAuth;
+import org.apache.kafka.common.config.SslConfigs;
+import org.apache.kafka.common.config.internals.BrokerSecurityConfigs;
+import org.apache.kafka.common.config.types.Password;
+import org.apache.kafka.common.errors.SaslAuthenticationException;
+import org.apache.kafka.common.errors.SslAuthenticationException;
+import org.apache.kafka.common.message.ApiMessageType;
+import org.apache.kafka.common.message.ApiVersionsRequestData;
+import org.apache.kafka.common.message.ApiVersionsResponseData;
+import org.apache.kafka.common.message.ApiVersionsResponseData.ApiVersion;
+import org.apache.kafka.common.message.ApiVersionsResponseData.ApiVersionCollection;
+import org.apache.kafka.common.message.ListOffsetsResponseData;
+import org.apache.kafka.common.message.ListOffsetsResponseData.ListOffsetsPartitionResponse;
+import org.apache.kafka.common.message.ListOffsetsResponseData.ListOffsetsTopicResponse;
+import org.apache.kafka.common.message.RequestHeaderData;
+import org.apache.kafka.common.message.SaslAuthenticateRequestData;
+import org.apache.kafka.common.message.SaslHandshakeRequestData;
+import org.apache.kafka.common.network.ByteBufferSend;
+import org.apache.kafka.common.network.CertStores;
+import org.apache.kafka.common.network.ChannelBuilder;
+import org.apache.kafka.common.network.ChannelBuilders;
+import org.apache.kafka.common.network.ChannelMetadataRegistry;
+import org.apache.kafka.common.network.ChannelState;
+import org.apache.kafka.common.network.ListenerName;
+import org.apache.kafka.common.network.Mode;
+import org.apache.kafka.common.network.NetworkSend;
+import org.apache.kafka.common.network.NetworkTestUtils;
+import org.apache.kafka.common.network.NioEchoServer;
+import org.apache.kafka.common.network.SaslChannelBuilder;
+import org.apache.kafka.common.network.Selector;
+import org.apache.kafka.common.network.TransportLayer;
+import org.apache.kafka.common.protocol.ApiKeys;
+import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.protocol.types.SchemaException;
+import org.apache.kafka.common.requests.AbstractRequest;
+import org.apache.kafka.common.requests.AbstractResponse;
+import org.apache.kafka.common.requests.ApiVersionsRequest;
+import org.apache.kafka.common.requests.ApiVersionsResponse;
+import org.apache.kafka.common.requests.ListOffsetsResponse;
+import org.apache.kafka.common.requests.MetadataRequest;
+import org.apache.kafka.common.requests.RequestHeader;
+import org.apache.kafka.common.requests.RequestTestUtils;
+import org.apache.kafka.common.requests.ResponseHeader;
+import org.apache.kafka.common.requests.SaslAuthenticateRequest;
+import org.apache.kafka.common.requests.SaslHandshakeRequest;
+import org.apache.kafka.common.requests.SaslHandshakeResponse;
+import org.apache.kafka.common.security.JaasContext;
+import org.apache.kafka.common.security.TestSecurityConfig;
+import org.apache.kafka.common.security.auth.AuthenticateCallbackHandler;
+import org.apache.kafka.common.security.auth.AuthenticationContext;
+import org.apache.kafka.common.security.auth.KafkaPrincipal;
+import org.apache.kafka.common.security.auth.KafkaPrincipalBuilder;
+import org.apache.kafka.common.security.auth.Login;
+import org.apache.kafka.common.security.auth.SaslAuthenticationContext;
+import org.apache.kafka.common.security.auth.SecurityProtocol;
+import org.apache.kafka.common.security.authenticator.TestDigestLoginModule.DigestServerCallbackHandler;
+import org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule;
+import org.apache.kafka.common.security.oauthbearer.OAuthBearerToken;
+import org.apache.kafka.common.security.oauthbearer.OAuthBearerTokenCallback;
+import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerConfigException;
+import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerIllegalTokenException;
+import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerUnsecuredJws;
+import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerUnsecuredLoginCallbackHandler;
+import org.apache.kafka.common.security.plain.PlainLoginModule;
+import org.apache.kafka.common.security.plain.internals.PlainServerCallbackHandler;
+import org.apache.kafka.common.security.scram.ScramCredential;
+import org.apache.kafka.common.security.scram.ScramLoginModule;
+import org.apache.kafka.common.security.scram.internals.ScramCredentialUtils;
+import org.apache.kafka.common.security.scram.internals.ScramFormatter;
+import org.apache.kafka.common.security.scram.internals.ScramMechanism;
+import org.apache.kafka.common.security.token.delegation.TokenInformation;
+import org.apache.kafka.common.security.token.delegation.internals.DelegationTokenCache;
+import org.apache.kafka.common.utils.LogContext;
+import org.apache.kafka.common.utils.MockTime;
+import org.apache.kafka.common.utils.SecurityUtils;
+import org.apache.kafka.common.utils.Time;
+import org.apache.kafka.common.utils.Utils;
+import org.apache.kafka.test.TestUtils;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.opentest4j.AssertionFailedError;
+
+import javax.net.ssl.SSLPeerUnverifiedException;
+import javax.security.auth.Subject;
+import javax.security.auth.callback.Callback;
+import javax.security.auth.callback.CallbackHandler;
+import javax.security.auth.callback.NameCallback;
+import javax.security.auth.callback.PasswordCallback;
+import javax.security.auth.callback.UnsupportedCallbackException;
+import javax.security.auth.login.AppConfigurationEntry;
+import javax.security.auth.login.Configuration;
+import javax.security.auth.login.LoginContext;
+import javax.security.auth.login.LoginException;
+import javax.security.sasl.SaslClient;
+import javax.security.sasl.SaslException;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
@@ -25,98 +124,26 @@ import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
+import java.util.Base64.Encoder;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import java.util.Base64.Encoder;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
-import javax.security.auth.Subject;
-import javax.security.auth.callback.Callback;
-import javax.security.auth.callback.CallbackHandler;
-import javax.security.auth.callback.NameCallback;
-import javax.security.auth.callback.PasswordCallback;
-import javax.security.auth.callback.UnsupportedCallbackException;
-import javax.security.auth.login.Configuration;
-import javax.security.auth.login.AppConfigurationEntry;
-import javax.security.auth.login.LoginContext;
-import javax.security.auth.login.LoginException;
-import javax.security.sasl.SaslException;
-
-import org.apache.kafka.clients.NetworkClient;
-import org.apache.kafka.common.KafkaException;
-import org.apache.kafka.common.config.SaslConfigs;
-import org.apache.kafka.common.config.internals.BrokerSecurityConfigs;
-import org.apache.kafka.common.config.types.Password;
-import org.apache.kafka.common.errors.SaslAuthenticationException;
-import org.apache.kafka.common.message.SaslAuthenticateRequestData;
-import org.apache.kafka.common.message.SaslHandshakeRequestData;
-import org.apache.kafka.common.network.CertStores;
-import org.apache.kafka.common.network.ChannelBuilder;
-import org.apache.kafka.common.network.ChannelBuilders;
-import org.apache.kafka.common.network.ChannelState;
-import org.apache.kafka.common.network.ListenerName;
-import org.apache.kafka.common.network.Mode;
-import org.apache.kafka.common.network.NetworkSend;
-import org.apache.kafka.common.network.NetworkTestUtils;
-import org.apache.kafka.common.network.NioEchoServer;
-import org.apache.kafka.common.network.SaslChannelBuilder;
-import org.apache.kafka.common.network.Selector;
-import org.apache.kafka.common.network.Send;
-import org.apache.kafka.common.network.TransportLayer;
-import org.apache.kafka.common.protocol.ApiKeys;
-import org.apache.kafka.common.protocol.Errors;
-import org.apache.kafka.common.security.auth.Login;
-import org.apache.kafka.common.security.auth.SecurityProtocol;
-import org.apache.kafka.common.requests.AbstractRequest;
-import org.apache.kafka.common.requests.AbstractResponse;
-import org.apache.kafka.common.requests.ApiVersionsRequest;
-import org.apache.kafka.common.requests.ApiVersionsResponse;
-import org.apache.kafka.common.requests.ApiVersionsResponse.ApiVersion;
-import org.apache.kafka.common.requests.MetadataRequest;
-import org.apache.kafka.common.requests.RequestHeader;
-import org.apache.kafka.common.requests.ResponseHeader;
-import org.apache.kafka.common.requests.SaslAuthenticateRequest;
-import org.apache.kafka.common.requests.SaslHandshakeRequest;
-import org.apache.kafka.common.requests.SaslHandshakeResponse;
-import org.apache.kafka.common.security.JaasContext;
-import org.apache.kafka.common.security.TestSecurityConfig;
-import org.apache.kafka.common.security.auth.KafkaPrincipal;
-import org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule;
-import org.apache.kafka.common.security.oauthbearer.OAuthBearerToken;
-import org.apache.kafka.common.security.oauthbearer.OAuthBearerTokenCallback;
-import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerConfigException;
-import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerIllegalTokenException;
-import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerUnsecuredJws;
-import org.apache.kafka.common.security.oauthbearer.internals.unsecured.OAuthBearerUnsecuredLoginCallbackHandler;
-import org.apache.kafka.common.security.plain.PlainLoginModule;
-import org.apache.kafka.common.security.scram.ScramCredential;
-import org.apache.kafka.common.security.scram.internals.ScramCredentialUtils;
-import org.apache.kafka.common.security.scram.internals.ScramFormatter;
-import org.apache.kafka.common.security.scram.ScramLoginModule;
-import org.apache.kafka.common.security.scram.internals.ScramMechanism;
-import org.apache.kafka.common.security.token.delegation.TokenInformation;
-import org.apache.kafka.common.security.token.delegation.internals.DelegationTokenCache;
-import org.apache.kafka.common.utils.MockTime;
-import org.apache.kafka.common.utils.SecurityUtils;
-import org.apache.kafka.common.security.auth.AuthenticateCallbackHandler;
-import org.apache.kafka.common.security.authenticator.TestDigestLoginModule.DigestServerCallbackHandler;
-import org.apache.kafka.common.security.plain.internals.PlainServerCallbackHandler;
-
-import org.apache.kafka.common.utils.Time;
-import org.apache.kafka.common.utils.Utils;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.apache.kafka.common.protocol.ApiKeys.LIST_OFFSETS;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 /**
  * Tests for the Sasl authenticator. These use a test harness that runs a simple socket server that echos back responses.
@@ -137,7 +164,7 @@ public class SaslAuthenticatorTest {
     private CredentialCache credentialCache;
     private int nextCorrelationId;
 
-    @Before
+	@BeforeEach
     public void setup() throws Exception {
         LoginManager.closeAll();
         time = Time.SYSTEM;
@@ -149,7 +176,7 @@ public class SaslAuthenticatorTest {
         TestLogin.loginCount.set(0);
     }
 
-    @After
+	@AfterEach
     public void teardown() throws Exception {
         if (server != null)
             this.server.close();
@@ -231,15 +258,15 @@ public class SaslAuthenticatorTest {
         SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
         server = createEchoServer(securityProtocol);
         createSelector(securityProtocol, saslClientConfigs);
-        InetSocketAddress addr = new InetSocketAddress("127.0.0.1", server.port());
+		InetSocketAddress addr = new InetSocketAddress("localhost", server.port());
         try {
             selector.connect(node, addr, BUFFER_SIZE, BUFFER_SIZE);
             fail("SASL/PLAIN channel created without username");
         } catch (IOException e) {
             // Expected exception
-            assertTrue("Channels not closed", selector.channels().isEmpty());
+			assertTrue(selector.channels().isEmpty(), "Channels not closed");
             for (SelectionKey key : selector.keys())
-                assertFalse("Key not cancelled", key.isValid());
+				assertFalse(key.isValid(), "Key not cancelled");
         }
     }
 
@@ -255,7 +282,7 @@ public class SaslAuthenticatorTest {
         SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
         server = createEchoServer(securityProtocol);
         createSelector(securityProtocol, saslClientConfigs);
-        InetSocketAddress addr = new InetSocketAddress("127.0.0.1", server.port());
+		InetSocketAddress addr = new InetSocketAddress("localhost", server.port());
         try {
             selector.connect(node, addr, BUFFER_SIZE, BUFFER_SIZE);
             fail("SASL/PLAIN channel created without password");
@@ -372,7 +399,7 @@ public class SaslAuthenticatorTest {
             saslClientConfigs.put(SaslConfigs.SASL_MECHANISM, "DIGEST-MD5");
             createSelector(securityProtocol, saslClientConfigs);
             selector2 = selector;
-            InetSocketAddress addr = new InetSocketAddress("127.0.0.1", server.port());
+			InetSocketAddress addr = new InetSocketAddress("localhost", server.port());
             selector.connect(node2, addr, BUFFER_SIZE, BUFFER_SIZE);
             NetworkTestUtils.checkClientConnection(selector, node2, 100, 10);
             selector = null; // keeps it from being closed when next one is created
@@ -381,9 +408,9 @@ public class SaslAuthenticatorTest {
             String node3 = "3";
             saslClientConfigs.put(SaslConfigs.SASL_MECHANISM, "SCRAM-SHA-256");
             createSelector(securityProtocol, saslClientConfigs);
-            selector3 = selector;
-            selector.connect(node3, new InetSocketAddress("127.0.0.1", server.port()), BUFFER_SIZE, BUFFER_SIZE);
-            NetworkTestUtils.checkClientConnection(selector, node3, 100, 10);
+			selector3 = selector;
+			selector.connect(node3, new InetSocketAddress("localhost", server.port()), BUFFER_SIZE, BUFFER_SIZE);
+			NetworkTestUtils.checkClientConnection(selector, node3, 100, 10);
             server.verifyAuthenticationMetrics(3, 0);
             
             /*
@@ -663,48 +690,149 @@ public class SaslAuthenticatorTest {
         testUnauthenticatedApiVersionsRequest(SecurityProtocol.SASL_SSL, (short) 1);
     }
 
-    /**
-     * Tests that unsupported version of ApiVersionsRequest before SASL handshake request
-     * returns error response and does not result in authentication failure. This test
-     * is similar to {@link #testUnauthenticatedApiVersionsRequest(SecurityProtocol, short)}
-     * where a non-SASL client is used to send requests that are processed by
-     * {@link SaslServerAuthenticator} of the server prior to client authentication.
-     */
-    @Test
-    public void testApiVersionsRequestWithUnsupportedVersion() throws Exception {
-        short handshakeVersion = ApiKeys.SASL_HANDSHAKE.latestVersion();
-        SecurityProtocol securityProtocol = SecurityProtocol.SASL_PLAINTEXT;
-        configureMechanisms("PLAIN", Arrays.asList("PLAIN"));
-        server = createEchoServer(securityProtocol);
+	/**
+	 * Tests that unsupported version of ApiVersionsRequest before SASL handshake request
+	 * returns error response and does not result in authentication failure. This test
+	 * is similar to {@link #testUnauthenticatedApiVersionsRequest(SecurityProtocol, short)}
+	 * where a non-SASL client is used to send requests that are processed by
+	 * {@link SaslServerAuthenticator} of the server prior to client authentication.
+	 */
+	@Test
+	public void testApiVersionsRequestWithServerUnsupportedVersion() throws Exception {
+		short handshakeVersion = ApiKeys.SASL_HANDSHAKE.latestVersion();
+		SecurityProtocol securityProtocol = SecurityProtocol.SASL_PLAINTEXT;
+		configureMechanisms("PLAIN", Arrays.asList("PLAIN"));
+		server = createEchoServer(securityProtocol);
 
-        // Send ApiVersionsRequest with unsupported version and validate error response.
-        String node = "1";
-        createClientConnection(SecurityProtocol.PLAINTEXT, node);
-        RequestHeader header = new RequestHeader(ApiKeys.API_VERSIONS, Short.MAX_VALUE, "someclient", 1);
-        ApiVersionsRequest request = new ApiVersionsRequest.Builder().build();
-        selector.send(request.toSend(node, header));
-        ByteBuffer responseBuffer = waitForResponse();
-        ResponseHeader.parse(responseBuffer);
-        ApiVersionsResponse response = ApiVersionsResponse.parse(responseBuffer, (short) 0);
-        assertEquals(Errors.UNSUPPORTED_VERSION, response.error());
+		// Send ApiVersionsRequest with unsupported version and validate error response.
+		String node = "1";
+		createClientConnection(SecurityProtocol.PLAINTEXT, node);
 
-        // Send ApiVersionsRequest with a supported version. This should succeed.
-        sendVersionRequestReceiveResponse(node);
+		RequestHeader header = new RequestHeader(new RequestHeaderData().
+				setRequestApiKey(ApiKeys.API_VERSIONS.id).
+				setRequestApiVersion(Short.MAX_VALUE).
+				setClientId("someclient").
+				setCorrelationId(1),
+				(short) 2);
+		ApiVersionsRequest request = new ApiVersionsRequest.Builder().build();
+		selector.send(new NetworkSend(node, request.toSend(header)));
+		ByteBuffer responseBuffer = waitForResponse();
+		ResponseHeader.parse(responseBuffer, ApiKeys.API_VERSIONS.responseHeaderVersion((short) 0));
+		ApiVersionsResponse response = ApiVersionsResponse.parse(responseBuffer, (short) 0);
+		assertEquals(Errors.UNSUPPORTED_VERSION.code(), response.data().errorCode());
 
-        // Test that client can authenticate successfully
-        sendHandshakeRequestReceiveResponse(node, handshakeVersion);
-        authenticateUsingSaslPlainAndCheckConnection(node, handshakeVersion > 0);
-    }
+		ApiVersion apiVersion = response.data().apiKeys().find(ApiKeys.API_VERSIONS.id);
+		assertNotNull(apiVersion);
+		assertEquals(ApiKeys.API_VERSIONS.id, apiVersion.apiKey());
+		assertEquals(ApiKeys.API_VERSIONS.oldestVersion(), apiVersion.minVersion());
+		assertEquals(ApiKeys.API_VERSIONS.latestVersion(), apiVersion.maxVersion());
 
-    /**
-     * Tests that unsupported version of SASL handshake request returns error
-     * response and fails authentication. This test is similar to
-     * {@link #testUnauthenticatedApiVersionsRequest(SecurityProtocol, short)}
-     * where a non-SASL client is used to send requests that are processed by
-     * {@link SaslServerAuthenticator} of the server prior to client authentication.
-     */
-    @Test
-    public void testSaslHandshakeRequestWithUnsupportedVersion() throws Exception {
+		// Send ApiVersionsRequest with a supported version. This should succeed.
+		sendVersionRequestReceiveResponse(node);
+
+		// Test that client can authenticate successfully
+		sendHandshakeRequestReceiveResponse(node, handshakeVersion);
+		authenticateUsingSaslPlainAndCheckConnection(node, handshakeVersion > 0);
+	}
+
+	/**
+	 * Tests correct negotiation of handshake and authenticate api versions by having the server
+	 * return a higher version than supported on the client.
+	 * Note, that due to KAFKA-9577 this will require a workaround to effectively bump
+	 * SASL_HANDSHAKE in the future.
+	 */
+	@Test
+	public void testSaslUnsupportedClientVersions() throws Exception {
+		configureMechanisms("SCRAM-SHA-512", Arrays.asList("SCRAM-SHA-512"));
+
+		server = startServerApiVersionsUnsupportedByClient(SecurityProtocol.SASL_SSL, "SCRAM-SHA-512");
+		updateScramCredentialCache(TestJaasConfig.USERNAME, TestJaasConfig.PASSWORD);
+
+		String node = "0";
+
+		createClientConnection(SecurityProtocol.SASL_SSL, "SCRAM-SHA-512", node, true);
+		NetworkTestUtils.checkClientConnection(selector, "0", 100, 10);
+	}
+
+	/**
+	 * Tests that invalid ApiVersionRequest is handled by the server correctly and
+	 * returns an INVALID_REQUEST error.
+	 */
+	@Test
+	public void testInvalidApiVersionsRequest() throws Exception {
+		short handshakeVersion = ApiKeys.SASL_HANDSHAKE.latestVersion();
+		SecurityProtocol securityProtocol = SecurityProtocol.SASL_PLAINTEXT;
+		configureMechanisms("PLAIN", Arrays.asList("PLAIN"));
+		server = createEchoServer(securityProtocol);
+
+		// Send ApiVersionsRequest with invalid version and validate error response.
+		String node = "1";
+		short version = ApiKeys.API_VERSIONS.latestVersion();
+		createClientConnection(SecurityProtocol.PLAINTEXT, node);
+		RequestHeader header = new RequestHeader(ApiKeys.API_VERSIONS, version, "someclient", 1);
+		ApiVersionsRequest request = new ApiVersionsRequest(new ApiVersionsRequestData().
+				setClientSoftwareName("  ").
+				setClientSoftwareVersion("   "), version);
+		selector.send(new NetworkSend(node, request.toSend(header)));
+		ByteBuffer responseBuffer = waitForResponse();
+		ResponseHeader.parse(responseBuffer, ApiKeys.API_VERSIONS.responseHeaderVersion(version));
+		ApiVersionsResponse response =
+				ApiVersionsResponse.parse(responseBuffer, version);
+		assertEquals(Errors.INVALID_REQUEST.code(), response.data().errorCode());
+
+		// Send ApiVersionsRequest with a supported version. This should succeed.
+		sendVersionRequestReceiveResponse(node);
+
+		// Test that client can authenticate successfully
+		sendHandshakeRequestReceiveResponse(node, handshakeVersion);
+		authenticateUsingSaslPlainAndCheckConnection(node, handshakeVersion > 0);
+	}
+
+
+	@Test
+	public void testForBrokenSaslHandshakeVersionBump() {
+		assertEquals(1, ApiKeys.SASL_HANDSHAKE.latestVersion(),
+				"It is not possible to easily bump SASL_HANDSHAKE schema due to improper version negotiation in " +
+						"clients < 2.5. Please see https://issues.apache.org/jira/browse/KAFKA-9577");
+	}
+
+	/**
+	 * Tests that valid ApiVersionRequest is handled by the server correctly and
+	 * returns an NONE error.
+	 */
+	@Test
+	public void testValidApiVersionsRequest() throws Exception {
+		short handshakeVersion = ApiKeys.SASL_HANDSHAKE.latestVersion();
+		SecurityProtocol securityProtocol = SecurityProtocol.SASL_PLAINTEXT;
+		configureMechanisms("PLAIN", Arrays.asList("PLAIN"));
+		server = createEchoServer(securityProtocol);
+
+		// Send ApiVersionsRequest with valid version and validate error response.
+		String node = "1";
+		short version = ApiKeys.API_VERSIONS.latestVersion();
+		createClientConnection(SecurityProtocol.PLAINTEXT, node);
+		RequestHeader header = new RequestHeader(ApiKeys.API_VERSIONS, version, "someclient", 1);
+		ApiVersionsRequest request = new ApiVersionsRequest.Builder().build(version);
+		selector.send(new NetworkSend(node, request.toSend(header)));
+		ByteBuffer responseBuffer = waitForResponse();
+		ResponseHeader.parse(responseBuffer, ApiKeys.API_VERSIONS.responseHeaderVersion(version));
+		ApiVersionsResponse response = ApiVersionsResponse.parse(responseBuffer, version);
+		assertEquals(Errors.NONE.code(), response.data().errorCode());
+
+		// Test that client can authenticate successfully
+		sendHandshakeRequestReceiveResponse(node, handshakeVersion);
+		authenticateUsingSaslPlainAndCheckConnection(node, handshakeVersion > 0);
+	}
+
+	/**
+	 * Tests that unsupported version of SASL handshake request returns error
+	 * response and fails authentication. This test is similar to
+	 * {@link #testUnauthenticatedApiVersionsRequest(SecurityProtocol, short)}
+	 * where a non-SASL client is used to send requests that are processed by
+	 * {@link SaslServerAuthenticator} of the server prior to client authentication.
+	 */
+	@Test
+	public void testSaslHandshakeRequestWithUnsupportedVersion() throws Exception {
         SecurityProtocol securityProtocol = SecurityProtocol.SASL_PLAINTEXT;
         configureMechanisms("PLAIN", Arrays.asList("PLAIN"));
         server = createEchoServer(securityProtocol);
@@ -714,8 +842,8 @@ public class SaslAuthenticatorTest {
         createClientConnection(SecurityProtocol.PLAINTEXT, node1);
         SaslHandshakeRequest request = buildSaslHandshakeRequest("PLAIN", ApiKeys.SASL_HANDSHAKE.latestVersion());
         RequestHeader header = new RequestHeader(ApiKeys.SASL_HANDSHAKE, Short.MAX_VALUE, "someclient", 2);
-        
-        selector.send(request.toSend(node1, header));
+
+		selector.send(new NetworkSend(node1, request.toSend(header)));
         // This test uses a non-SASL PLAINTEXT client in order to do manual handshake.
         // So the channel is in READY state.
         NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
@@ -742,9 +870,9 @@ public class SaslAuthenticatorTest {
         sendHandshakeRequestReceiveResponse(node1, (short) 1);
         Random random = new Random();
         byte[] bytes = new byte[1024];
-        random.nextBytes(bytes);
-        selector.send(new NetworkSend(node1, ByteBuffer.wrap(bytes)));
-        NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
+		random.nextBytes(bytes);
+		selector.send(new NetworkSend(node1, ByteBufferSend.sizePrefixed(ByteBuffer.wrap(bytes))));
+		NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
         selector.close();
 
         // Test good connection still works
@@ -753,9 +881,9 @@ public class SaslAuthenticatorTest {
         // Send invalid SASL packet before handshake request
         String node2 = "invalid2";
         createClientConnection(SecurityProtocol.PLAINTEXT, node2);
-        random.nextBytes(bytes);
-        selector.send(new NetworkSend(node2, ByteBuffer.wrap(bytes)));
-        NetworkTestUtils.waitForChannelClose(selector, node2, ChannelState.READY.state());
+		random.nextBytes(bytes);
+		selector.send(new NetworkSend(node2, ByteBufferSend.sizePrefixed(ByteBuffer.wrap(bytes))));
+		NetworkTestUtils.waitForChannelClose(selector, node2, ChannelState.READY.state());
         selector.close();
 
         // Test good connection still works
@@ -782,8 +910,8 @@ public class SaslAuthenticatorTest {
 
         ApiVersionsRequest request = createApiVersionsRequestV0();
         RequestHeader versionsHeader = new RequestHeader(ApiKeys.API_VERSIONS, request.version(), "someclient", 2);
-        selector.send(request.toSend(node1, versionsHeader));
-        NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
+		selector.send(new NetworkSend(node1, request.toSend(versionsHeader)));
+		NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
         selector.close();
 
         // Test good connection still works
@@ -808,9 +936,9 @@ public class SaslAuthenticatorTest {
         ByteBuffer buffer = ByteBuffer.allocate(1024);
         buffer.putInt(Integer.MAX_VALUE);
         buffer.put(new byte[buffer.capacity() - 4]);
-        buffer.rewind();
-        selector.send(new NetworkSend(node1, buffer));
-        NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
+		buffer.rewind();
+		selector.send(new NetworkSend(node1, ByteBufferSend.sizePrefixed(buffer)));
+		NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
         selector.close();
 
         // Test good connection still works
@@ -822,9 +950,9 @@ public class SaslAuthenticatorTest {
         buffer.clear();
         buffer.putInt(Integer.MAX_VALUE);
         buffer.put(new byte[buffer.capacity() - 4]);
-        buffer.rewind();
-        selector.send(new NetworkSend(node2, buffer));
-        NetworkTestUtils.waitForChannelClose(selector, node2, ChannelState.READY.state());
+		buffer.rewind();
+		selector.send(new NetworkSend(node2, ByteBufferSend.sizePrefixed(buffer)));
+		NetworkTestUtils.waitForChannelClose(selector, node2, ChannelState.READY.state());
         selector.close();
 
         // Test good connection still works
@@ -848,8 +976,8 @@ public class SaslAuthenticatorTest {
                 true).build();
         RequestHeader metadataRequestHeader1 = new RequestHeader(ApiKeys.METADATA, metadataRequest1.version(),
                 "someclient", 1);
-        selector.send(metadataRequest1.toSend(node1, metadataRequestHeader1));
-        NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
+		selector.send(new NetworkSend(node1, metadataRequest1.toSend(metadataRequestHeader1)));
+		NetworkTestUtils.waitForChannelClose(selector, node1, ChannelState.READY.state());
         selector.close();
 
         // Test good connection still works
@@ -862,8 +990,8 @@ public class SaslAuthenticatorTest {
         MetadataRequest metadataRequest2 = new MetadataRequest.Builder(Collections.singletonList("sometopic"), true).build();
         RequestHeader metadataRequestHeader2 = new RequestHeader(ApiKeys.METADATA,
                 metadataRequest2.version(), "someclient", 2);
-        selector.send(metadataRequest2.toSend(node2, metadataRequestHeader2));
-        NetworkTestUtils.waitForChannelClose(selector, node2, ChannelState.READY.state());
+		selector.send(new NetworkSend(node2, metadataRequest2.toSend(metadataRequestHeader2)));
+		NetworkTestUtils.waitForChannelClose(selector, node2, ChannelState.READY.state());
         selector.close();
 
         // Test good connection still works
@@ -1029,7 +1157,7 @@ public class SaslAuthenticatorTest {
         try {
             createClientConnection(securityProtocol, "invalid");
         } catch (Exception e) {
-            assertTrue("Unexpected exception " + e.getCause(), e.getCause() instanceof LoginException);
+			assertTrue(e.getCause() instanceof LoginException, "Unexpected exception " + e.getCause());
         }
     }
 
@@ -1110,16 +1238,25 @@ public class SaslAuthenticatorTest {
      */
     @Test
     public void testInvalidMechanism() throws Exception {
-        String node = "0";
-        SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
-        configureMechanisms("PLAIN", Arrays.asList("PLAIN"));
-        saslClientConfigs.put(SaslConfigs.SASL_MECHANISM, "INVALID");
+		String node = "0";
+		SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
+		configureMechanisms("PLAIN", Arrays.asList("PLAIN"));
+		saslClientConfigs.put(SaslConfigs.SASL_MECHANISM, "INVALID");
 
-        server = createEchoServer(securityProtocol);
-        createAndCheckClientConnectionFailure(securityProtocol, node);
-        server.verifyAuthenticationMetrics(0, 1);
-        server.verifyReauthenticationMetrics(0, 0);
-    }
+		server = createEchoServer(securityProtocol);
+		try {
+			createAndCheckClientConnectionFailure(securityProtocol, node);
+			fail("Did not generate exception prior to creating channel");
+		} catch (IOException expected) {
+			server.verifyAuthenticationMetrics(0, 0);
+			server.verifyReauthenticationMetrics(0, 0);
+			Throwable underlyingCause = expected.getCause().getCause().getCause();
+			assertEquals(SaslAuthenticationException.class, underlyingCause.getClass());
+			assertEquals("Failed to create SaslClient with mechanism INVALID", underlyingCause.getMessage());
+		} finally {
+			closeClientConnectionIfNecessary();
+		}
+	}
 
     /**
      * Tests dynamic JAAS configuration property for SASL clients. Invalid client credentials
@@ -1410,33 +1547,79 @@ public class SaslAuthenticatorTest {
         server = createEchoServer(securityProtocol);
         // initial authentication must succeed
         createClientConnection(securityProtocol, node);
-        checkClientConnection(node);
-        // ensure metrics are as expected before trying to re-authenticate
-        server.verifyAuthenticationMetrics(1, 0);
-        server.verifyReauthenticationMetrics(0, 0);
-        /*
-         * Now re-authenticate with a different principal and ensure it fails. We first
-         * have to sleep long enough for the background refresh thread to replace the
-         * original token with a new one.
-         */
-        delay(1000L);
-        try {
-            checkClientConnection(node);
-            fail("Re-authentication with a different principal should have failed but did not");
-        } catch (AssertionError e) {
-            // ignore, expected
-            server.verifyReauthenticationMetrics(0, 1);
-        }
-    }
-    
-    /**
-     * Re-authentication must fail if mechanism changes
-     */
-    @Test
-    public void testCannotReauthenticateWithDifferentMechanism() throws Exception {
-        String node = "0";
-        SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
-        configureMechanisms("DIGEST-MD5", Arrays.asList("DIGEST-MD5", "PLAIN"));
+		checkClientConnection(node);
+		// ensure metrics are as expected before trying to re-authenticate
+		server.verifyAuthenticationMetrics(1, 0);
+		server.verifyReauthenticationMetrics(0, 0);
+		/*
+		 * Now re-authenticate with a different principal and ensure it fails. We first
+		 * have to sleep long enough for the background refresh thread to replace the
+		 * original token with a new one.
+		 */
+		delay(1000L);
+		assertThrows(AssertionFailedError.class, () -> checkClientConnection(node));
+		server.verifyReauthenticationMetrics(0, 1);
+	}
+
+	@Test
+	public void testCorrelationId() {
+		SaslClientAuthenticator authenticator = new SaslClientAuthenticator(
+				Collections.emptyMap(),
+				null,
+				"node",
+				null,
+				null,
+				null,
+				"plain",
+				false,
+				null,
+				null,
+				new LogContext()
+		) {
+			@Override
+			SaslClient createSaslClient() {
+				return null;
+			}
+		};
+		int count = (SaslClientAuthenticator.MAX_RESERVED_CORRELATION_ID - SaslClientAuthenticator.MIN_RESERVED_CORRELATION_ID) * 2;
+		Set<Integer> ids = IntStream.range(0, count)
+				.mapToObj(i -> authenticator.nextCorrelationId())
+				.collect(Collectors.toSet());
+		assertEquals(SaslClientAuthenticator.MAX_RESERVED_CORRELATION_ID - SaslClientAuthenticator.MIN_RESERVED_CORRELATION_ID + 1, ids.size());
+		ids.forEach(id -> {
+			assertTrue(id >= SaslClientAuthenticator.MIN_RESERVED_CORRELATION_ID);
+			assertTrue(SaslClientAuthenticator.isReserved(id));
+		});
+	}
+
+	@Test
+	public void testConvertListOffsetResponseToSaslHandshakeResponse() {
+		ListOffsetsResponseData data = new ListOffsetsResponseData()
+				.setThrottleTimeMs(0)
+				.setTopics(Collections.singletonList(new ListOffsetsTopicResponse()
+						.setName("topic")
+						.setPartitions(Collections.singletonList(new ListOffsetsPartitionResponse()
+								.setErrorCode(Errors.NONE.code())
+								.setLeaderEpoch(ListOffsetsResponse.UNKNOWN_EPOCH)
+								.setPartitionIndex(0)
+								.setOffset(0)
+								.setTimestamp(0)))));
+		ListOffsetsResponse response = new ListOffsetsResponse(data);
+		ByteBuffer buffer = RequestTestUtils.serializeResponseWithHeader(response, LIST_OFFSETS.latestVersion(), 0);
+		final RequestHeader header0 = new RequestHeader(LIST_OFFSETS, LIST_OFFSETS.latestVersion(), "id", SaslClientAuthenticator.MIN_RESERVED_CORRELATION_ID);
+		assertThrows(SchemaException.class, () -> NetworkClient.parseResponse(buffer.duplicate(), header0));
+		final RequestHeader header1 = new RequestHeader(LIST_OFFSETS, LIST_OFFSETS.latestVersion(), "id", 1);
+		assertThrows(IllegalStateException.class, () -> NetworkClient.parseResponse(buffer.duplicate(), header1));
+	}
+
+	/**
+	 * Re-authentication must fail if mechanism changes
+	 */
+	@Test
+	public void testCannotReauthenticateWithDifferentMechanism() throws Exception {
+		String node = "0";
+		SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
+		configureMechanisms("DIGEST-MD5", Arrays.asList("DIGEST-MD5", "PLAIN"));
         configureDigestMd5ServerCallback(securityProtocol);
         server = createEchoServer(securityProtocol);
 
@@ -1449,25 +1632,20 @@ public class SaslAuthenticatorTest {
         // initial authentication must succeed
         this.selector = NetworkTestUtils.createSelector(channelBuilder, time);
         InetSocketAddress addr = new InetSocketAddress("localhost", server.port());
-        selector.connect(node, addr, BUFFER_SIZE, BUFFER_SIZE);
-        checkClientConnection(node);
-        // ensure metrics are as expected before trying to re-authenticate
-        server.verifyAuthenticationMetrics(1, 0);
-        server.verifyReauthenticationMetrics(0, 0);
-        /*
-         * Now re-authenticate with a different mechanism and ensure it fails. We have
-         * to sleep long enough so that the next write will trigger a re-authentication.
-         */
-        delay((long) (CONNECTIONS_MAX_REAUTH_MS_VALUE * 1.1));
-        try {
-            checkClientConnection(node);
-            fail("Re-authentication with a different mechanism should have failed but did not");
-        } catch (AssertionError e) {
-            // ignore, expected
-            server.verifyAuthenticationMetrics(1, 0);
-            server.verifyReauthenticationMetrics(0, 1);
-        }
-    }
+		selector.connect(node, addr, BUFFER_SIZE, BUFFER_SIZE);
+		checkClientConnection(node);
+		// ensure metrics are as expected before trying to re-authenticate
+		server.verifyAuthenticationMetrics(1, 0);
+		server.verifyReauthenticationMetrics(0, 0);
+		/*
+		 * Now re-authenticate with a different mechanism and ensure it fails. We have
+		 * to sleep long enough so that the next write will trigger a re-authentication.
+		 */
+		delay((long) (CONNECTIONS_MAX_REAUTH_MS_VALUE * 1.1));
+		assertThrows(AssertionFailedError.class, () -> checkClientConnection(node));
+		server.verifyAuthenticationMetrics(1, 0);
+		server.verifyReauthenticationMetrics(0, 1);
+	}
 
     /**
      * Second re-authentication must fail if it is sooner than one second after the first
@@ -1491,32 +1669,30 @@ public class SaslAuthenticatorTest {
              */
             time.sleep((long) (CONNECTIONS_MAX_REAUTH_MS_VALUE * 1.1));
             checkClientConnection(node);
-            server.verifyAuthenticationMetrics(1, 0);
-            server.verifyReauthenticationMetrics(1, 0);
-            /*
-             * Now sleep long enough so that the next write will cause re-authentication,
-             * but this time we expect re-authentication to not occur since it has been too
-             * soon. The checkClientConnection() call should return an error saying it
-             * expected the one byte-plus-node response but got the SaslHandshakeRequest
-             * instead
-             */
-            time.sleep((long) (CONNECTIONS_MAX_REAUTH_MS_VALUE * 1.1));
-            NetworkTestUtils.checkClientConnection(selector, node, 1, 1);
-            fail("Expected a failure when trying to re-authenticate to quickly, but that did not occur");
-        } catch (AssertionError e) {
-            String expectedResponseTextRegex = "\\w-" + node;
-            String receivedResponseTextRegex = ".*" + OAuthBearerLoginModule.OAUTHBEARER_MECHANISM;
-            assertTrue(
-                    "Should have received the SaslHandshakeRequest bytes back since we re-authenticated too quickly, " +
-                    "but instead we got our generated message echoed back, implying re-auth succeeded when it " +
-                    "should not have: " + e,
-                    e.getMessage().matches(
-                            ".*\\<\\[" + expectedResponseTextRegex + "]>.*\\<\\[" + receivedResponseTextRegex + "]>"));
-            server.verifyReauthenticationMetrics(1, 0); // unchanged
-        } finally { 
-            selector.close();
-            selector = null;
-        }
+			server.verifyAuthenticationMetrics(1, 0);
+			server.verifyReauthenticationMetrics(1, 0);
+			/*
+			 * Now sleep long enough so that the next write will cause re-authentication,
+			 * but this time we expect re-authentication to not occur since it has been too
+			 * soon. The checkClientConnection() call should return an error saying it
+			 * expected the one byte-plus-node response but got the SaslHandshakeRequest
+			 * instead
+			 */
+			time.sleep((long) (CONNECTIONS_MAX_REAUTH_MS_VALUE * 1.1));
+			AssertionFailedError exception = assertThrows(AssertionFailedError.class,
+					() -> NetworkTestUtils.checkClientConnection(selector, node, 1, 1));
+			String expectedResponseTextRegex = "\\w-" + node;
+			String receivedResponseTextRegex = ".*" + OAuthBearerLoginModule.OAUTHBEARER_MECHANISM;
+			assertTrue(exception.getMessage().matches(
+					".*<" + expectedResponseTextRegex + ">.*<" + receivedResponseTextRegex + ".*?>"),
+					"Should have received the SaslHandshakeRequest bytes back since we re-authenticated too quickly, " +
+							"but instead we got our generated message echoed back, implying re-auth succeeded when it should not have: " +
+							exception);
+			server.verifyReauthenticationMetrics(1, 0); // unchanged
+		} finally {
+			selector.close();
+			selector = null;
+		}
     }
 
     /**
@@ -1536,8 +1712,8 @@ public class SaslAuthenticatorTest {
          * of the data that the client explicitly sent, and then the client will not
          * recognize that data and will throw an assertion error.
          */
-        saslServerConfigs.put(BrokerSecurityConfigs.CONNECTIONS_MAX_REAUTH_MS,
-                new Double(1.1 * 1000L / 0.85).longValue());
+		saslServerConfigs.put(BrokerSecurityConfigs.CONNECTIONS_MAX_REAUTH_MS,
+				Double.valueOf(1.1 * 1000L / 0.85).longValue());
 
         server = createEchoServer(securityProtocol);
         createClientConnection(securityProtocol, node);
@@ -1586,7 +1762,7 @@ public class SaslAuthenticatorTest {
             createEchoServer(securityProtocol);
             fail("Server created with invalid login config containing extensions without a token");
         } catch (Throwable e) {
-            assertTrue("Unexpected exception " + Utils.stackTrace(e), e.getCause() instanceof LoginException);
+			assertTrue(e.getCause() instanceof LoginException, "Unexpected exception " + Utils.stackTrace(e));
         }
     }
 
@@ -1599,25 +1775,93 @@ public class SaslAuthenticatorTest {
         SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
         TestJaasConfig jaasConfig = configureMechanisms("OAUTHBEARER", Arrays.asList("OAUTHBEARER"));
         // now update the server side to require a scope the client does not provide
-        Map<String, Object> serverJaasConfigOptionsMap = TestJaasConfig.defaultServerOptions("OAUTHBEARER");
-        serverJaasConfigOptionsMap.put("unsecuredValidatorRequiredScope", "LOGIN_TO_KAFKA"); // causes the failure
-        jaasConfig.createOrUpdateEntry("KafkaServer",
-                "org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule", serverJaasConfigOptionsMap);
-        server = createEchoServer(securityProtocol);
-        createAndCheckClientAuthenticationFailure(securityProtocol,
-                "node-" + OAuthBearerLoginModule.OAUTHBEARER_MECHANISM, OAuthBearerLoginModule.OAUTHBEARER_MECHANISM,
-                "{\"status\":\"insufficient_scope\", \"scope\":\"[LOGIN_TO_KAFKA]\"}");
-    }
+		Map<String, Object> serverJaasConfigOptionsMap = TestJaasConfig.defaultServerOptions("OAUTHBEARER");
+		serverJaasConfigOptionsMap.put("unsecuredValidatorRequiredScope", "LOGIN_TO_KAFKA"); // causes the failure
+		jaasConfig.createOrUpdateEntry("KafkaServer",
+				"org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule", serverJaasConfigOptionsMap);
+		server = createEchoServer(securityProtocol);
+		createAndCheckClientAuthenticationFailure(securityProtocol,
+				"node-" + OAuthBearerLoginModule.OAUTHBEARER_MECHANISM, OAuthBearerLoginModule.OAUTHBEARER_MECHANISM,
+				"{\"status\":\"insufficient_scope\", \"scope\":\"[LOGIN_TO_KAFKA]\"}");
+	}
 
-    private void verifySaslAuthenticateHeaderInterop(boolean enableHeaderOnServer, boolean enableHeaderOnClient,
-            SecurityProtocol securityProtocol, String saslMechanism) throws Exception {
-        configureMechanisms(saslMechanism, Arrays.asList(saslMechanism));
-        createServer(securityProtocol, saslMechanism, enableHeaderOnServer);
+	@Test
+	public void testSslClientAuthDisabledForSaslSslListener() throws Exception {
+		verifySslClientAuthForSaslSslListener(true, SslClientAuth.NONE);
+	}
 
-        String node = "0";
-        createClientConnection(securityProtocol, saslMechanism, node, enableHeaderOnClient);
-        NetworkTestUtils.checkClientConnection(selector, "0", 100, 10);
-    }
+	@Test
+	public void testSslClientAuthRequestedForSaslSslListener() throws Exception {
+		verifySslClientAuthForSaslSslListener(true, SslClientAuth.REQUESTED);
+	}
+
+	@Test
+	public void testSslClientAuthRequiredForSaslSslListener() throws Exception {
+		verifySslClientAuthForSaslSslListener(true, SslClientAuth.REQUIRED);
+	}
+
+	@Test
+	public void testSslClientAuthRequestedOverriddenForSaslSslListener() throws Exception {
+		verifySslClientAuthForSaslSslListener(false, SslClientAuth.REQUESTED);
+	}
+
+	@Test
+	public void testSslClientAuthRequiredOverriddenForSaslSslListener() throws Exception {
+		verifySslClientAuthForSaslSslListener(false, SslClientAuth.REQUIRED);
+	}
+
+	private void verifySslClientAuthForSaslSslListener(boolean useListenerPrefix,
+													   SslClientAuth configuredClientAuth) throws Exception {
+
+		SecurityProtocol securityProtocol = SecurityProtocol.SASL_SSL;
+		configureMechanisms("PLAIN", Collections.singletonList("PLAIN"));
+		String listenerPrefix = useListenerPrefix ? ListenerName.forSecurityProtocol(securityProtocol).configPrefix() : "";
+		saslServerConfigs.put(listenerPrefix + BrokerSecurityConfigs.SSL_CLIENT_AUTH_CONFIG, configuredClientAuth.name());
+		saslServerConfigs.put(BrokerSecurityConfigs.PRINCIPAL_BUILDER_CLASS_CONFIG, SaslSslPrincipalBuilder.class.getName());
+		server = createEchoServer(securityProtocol);
+
+		SslClientAuth expectedClientAuth = useListenerPrefix ? configuredClientAuth : SslClientAuth.NONE;
+		String certDn = "O=A client,CN=localhost";
+		KafkaPrincipal principalWithMutualTls = SaslSslPrincipalBuilder.saslSslPrincipal(TestJaasConfig.USERNAME, certDn);
+		KafkaPrincipal principalWithOneWayTls = SaslSslPrincipalBuilder.saslSslPrincipal(TestJaasConfig.USERNAME, "ANONYMOUS");
+
+		// Client configured with valid key store
+		createAndCheckClientConnectionAndPrincipal(securityProtocol, "0",
+				expectedClientAuth == SslClientAuth.NONE ? principalWithOneWayTls : principalWithMutualTls);
+
+		// Client does not configure key store
+		removeClientSslKeystore();
+		if (expectedClientAuth != SslClientAuth.REQUIRED) {
+			createAndCheckClientConnectionAndPrincipal(securityProtocol, "1", principalWithOneWayTls);
+		} else {
+			createAndCheckSslAuthenticationFailure(securityProtocol, "1");
+		}
+
+		// Client configures untrusted key store
+		CertStores newStore = new CertStores(false, "localhost");
+		newStore.keyStoreProps().forEach((k, v) -> saslClientConfigs.put(k, v));
+		if (expectedClientAuth == SslClientAuth.NONE) {
+			createAndCheckClientConnectionAndPrincipal(securityProtocol, "2", principalWithOneWayTls);
+		} else {
+			createAndCheckSslAuthenticationFailure(securityProtocol, "2");
+		}
+	}
+
+	private void removeClientSslKeystore() {
+		saslClientConfigs.remove(SslConfigs.SSL_KEYSTORE_LOCATION_CONFIG);
+		saslClientConfigs.remove(SslConfigs.SSL_KEYSTORE_PASSWORD_CONFIG);
+		saslClientConfigs.remove(SslConfigs.SSL_KEY_PASSWORD_CONFIG);
+	}
+
+	private void verifySaslAuthenticateHeaderInterop(boolean enableHeaderOnServer, boolean enableHeaderOnClient,
+													 SecurityProtocol securityProtocol, String saslMechanism) throws Exception {
+		configureMechanisms(saslMechanism, Arrays.asList(saslMechanism));
+		createServer(securityProtocol, saslMechanism, enableHeaderOnServer);
+
+		String node = "0";
+		createClientConnection(securityProtocol, saslMechanism, node, enableHeaderOnClient);
+		NetworkTestUtils.checkClientConnection(selector, "0", 100, 10);
+	}
 
     private void verifySaslAuthenticateHeaderInteropWithFailure(boolean enableHeaderOnServer, boolean enableHeaderOnClient,
             SecurityProtocol securityProtocol, String saslMechanism) throws Exception {
@@ -1640,57 +1884,93 @@ public class SaslAuthenticatorTest {
         else
             server = startServerWithoutSaslAuthenticateHeader(securityProtocol, saslMechanism);
         updateScramCredentialCache(TestJaasConfig.USERNAME, TestJaasConfig.PASSWORD);
-    }
+	}
 
-    private void createClientConnection(SecurityProtocol securityProtocol, String saslMechanism, String node,
-            boolean enableSaslAuthenticateHeader) throws Exception {
-        if (enableSaslAuthenticateHeader)
-            createClientConnection(securityProtocol, node);
-        else
-            createClientConnectionWithoutSaslAuthenticateHeader(securityProtocol, saslMechanism, node);
-    }
+	private void createClientConnection(SecurityProtocol securityProtocol, String saslMechanism, String node,
+										boolean enableSaslAuthenticateHeader) throws Exception {
+		if (enableSaslAuthenticateHeader)
+			createClientConnection(securityProtocol, node);
+		else
+			createClientConnectionWithoutSaslAuthenticateHeader(securityProtocol, saslMechanism, node);
+	}
 
-    private NioEchoServer startServerWithoutSaslAuthenticateHeader(final SecurityProtocol securityProtocol, String saslMechanism)
-            throws Exception {
-        final ListenerName listenerName = ListenerName.forSecurityProtocol(securityProtocol);
-        final Map<String, ?> configs = Collections.emptyMap();
-        final JaasContext jaasContext = JaasContext.loadServerContext(listenerName, saslMechanism, configs);
-        final Map<String, JaasContext> jaasContexts = Collections.singletonMap(saslMechanism, jaasContext);
+	private NioEchoServer startServerApiVersionsUnsupportedByClient(final SecurityProtocol securityProtocol, String saslMechanism) throws Exception {
+		final ListenerName listenerName = ListenerName.forSecurityProtocol(securityProtocol);
+		final Map<String, ?> configs = Collections.emptyMap();
+		final JaasContext jaasContext = JaasContext.loadServerContext(listenerName, saslMechanism, configs);
+		final Map<String, JaasContext> jaasContexts = Collections.singletonMap(saslMechanism, jaasContext);
 
-        boolean isScram = ScramMechanism.isScram(saslMechanism);
-        if (isScram)
-            ScramCredentialUtils.createCache(credentialCache, Arrays.asList(saslMechanism));
-        SaslChannelBuilder serverChannelBuilder = new SaslChannelBuilder(Mode.SERVER, jaasContexts,
-                securityProtocol, listenerName, false, saslMechanism, true, credentialCache, null, time) {
+		boolean isScram = ScramMechanism.isScram(saslMechanism);
+		if (isScram)
+			ScramCredentialUtils.createCache(credentialCache, Arrays.asList(saslMechanism));
 
-            @Override
-            protected SaslServerAuthenticator buildServerAuthenticator(Map<String, ?> configs,
-                                                                       Map<String, AuthenticateCallbackHandler> callbackHandlers,
-                                                                       String id,
-                                                                       TransportLayer transportLayer,
-                                                                       Map<String, Subject> subjects,
-                                                                       Map<String, Long> connectionsMaxReauthMsByMechanism) {
-                return new SaslServerAuthenticator(configs, callbackHandlers, id, subjects, null, listenerName, securityProtocol, transportLayer, connectionsMaxReauthMsByMechanism, time) {
+		Supplier<ApiVersionsResponse> apiVersionSupplier = () -> {
+			ApiVersionCollection versionCollection = new ApiVersionCollection(2);
+			versionCollection.add(new ApiVersion().setApiKey(ApiKeys.SASL_HANDSHAKE.id).setMinVersion((short) 0).setMaxVersion((short) 100));
+			versionCollection.add(new ApiVersion().setApiKey(ApiKeys.SASL_AUTHENTICATE.id).setMinVersion((short) 0).setMaxVersion((short) 100));
+			return new ApiVersionsResponse(new ApiVersionsResponseData().setApiKeys(versionCollection));
+		};
 
-                    @Override
-                    protected ApiVersionsResponse apiVersionsResponse() {
-                        List<ApiVersion> apiVersions = new ArrayList<>(ApiVersionsResponse.defaultApiVersionsResponse().apiVersions());
-                        for (Iterator<ApiVersion> it = apiVersions.iterator(); it.hasNext(); ) {
-                            ApiVersion apiVersion = it.next();
-                            if (apiVersion.apiKey == ApiKeys.SASL_AUTHENTICATE.id) {
-                                it.remove();
-                                break;
-                            }
-                        }
-                        return new ApiVersionsResponse(0, Errors.NONE, apiVersions);
-                    }
+		SaslChannelBuilder serverChannelBuilder = new SaslChannelBuilder(Mode.SERVER, jaasContexts,
+				securityProtocol, listenerName, false, saslMechanism, true,
+				credentialCache, null, null, time, new LogContext(), apiVersionSupplier);
 
-                    @Override
-                    protected void enableKafkaSaslAuthenticateHeaders(boolean flag) {
-                        // Don't enable Kafka SASL_AUTHENTICATE headers
-                    }
-                };
-            }
+		serverChannelBuilder.configure(saslServerConfigs);
+		server = new NioEchoServer(listenerName, securityProtocol, new TestSecurityConfig(saslServerConfigs),
+				"localhost", serverChannelBuilder, credentialCache, time);
+		server.start();
+		return server;
+	}
+
+	private NioEchoServer startServerWithoutSaslAuthenticateHeader(final SecurityProtocol securityProtocol, String saslMechanism)
+			throws Exception {
+		final ListenerName listenerName = ListenerName.forSecurityProtocol(securityProtocol);
+		final Map<String, ?> configs = Collections.emptyMap();
+		final JaasContext jaasContext = JaasContext.loadServerContext(listenerName, saslMechanism, configs);
+		final Map<String, JaasContext> jaasContexts = Collections.singletonMap(saslMechanism, jaasContext);
+
+		boolean isScram = ScramMechanism.isScram(saslMechanism);
+		if (isScram)
+			ScramCredentialUtils.createCache(credentialCache, Arrays.asList(saslMechanism));
+
+		Supplier<ApiVersionsResponse> apiVersionSupplier = () -> {
+			ApiVersionsResponse defaultApiVersionResponse = ApiVersionsResponse.defaultApiVersionsResponse(
+					ApiMessageType.ListenerType.ZK_BROKER);
+			ApiVersionCollection apiVersions = new ApiVersionCollection();
+			for (ApiVersion apiVersion : defaultApiVersionResponse.data().apiKeys()) {
+				if (apiVersion.apiKey() != ApiKeys.SASL_AUTHENTICATE.id) {
+					// ApiVersion can NOT be reused in second ApiVersionCollection
+					// due to the internal pointers it contains.
+					apiVersions.add(apiVersion.duplicate());
+				}
+
+			}
+			ApiVersionsResponseData data = new ApiVersionsResponseData()
+					.setErrorCode(Errors.NONE.code())
+					.setThrottleTimeMs(0)
+					.setApiKeys(apiVersions);
+			return new ApiVersionsResponse(data);
+		};
+
+		SaslChannelBuilder serverChannelBuilder = new SaslChannelBuilder(Mode.SERVER, jaasContexts,
+				securityProtocol, listenerName, false, saslMechanism, true,
+				credentialCache, null, null, time, new LogContext(), apiVersionSupplier) {
+			@Override
+			protected SaslServerAuthenticator buildServerAuthenticator(Map<String, ?> configs,
+																	   Map<String, AuthenticateCallbackHandler> callbackHandlers,
+																	   String id,
+																	   TransportLayer transportLayer,
+																	   Map<String, Subject> subjects,
+																	   Map<String, Long> connectionsMaxReauthMsByMechanism,
+																	   ChannelMetadataRegistry metadataRegistry) {
+				return new SaslServerAuthenticator(configs, callbackHandlers, id, subjects, null, listenerName,
+						securityProtocol, transportLayer, connectionsMaxReauthMsByMechanism, metadataRegistry, time, apiVersionSupplier) {
+					@Override
+					protected void enableKafkaSaslAuthenticateHeaders(boolean flag) {
+						// Don't enable Kafka SASL_AUTHENTICATE headers
+					}
+				};
+			}
         };
         serverChannelBuilder.configure(saslServerConfigs);
         server = new NioEchoServer(listenerName, securityProtocol, new TestSecurityConfig(saslServerConfigs),
@@ -1708,33 +1988,36 @@ public class SaslAuthenticatorTest {
         final Map<String, JaasContext> jaasContexts = Collections.singletonMap(saslMechanism, jaasContext);
 
         SaslChannelBuilder clientChannelBuilder = new SaslChannelBuilder(Mode.CLIENT, jaasContexts,
-                securityProtocol, listenerName, false, saslMechanism, true, null, null, time) {
+				securityProtocol, listenerName, false, saslMechanism, true,
+				null, null, null, time, new LogContext(), null) {
 
-            @Override
-            protected SaslClientAuthenticator buildClientAuthenticator(Map<String, ?> configs,
-                                                                       AuthenticateCallbackHandler callbackHandler,
-                                                                       String id,
-                                                                       String serverHost,
-                                                                       String servicePrincipal,
-                                                                       TransportLayer transportLayer,
-                                                                       Subject subject) {
+			@Override
+			protected SaslClientAuthenticator buildClientAuthenticator(Map<String, ?> configs,
+																	   AuthenticateCallbackHandler callbackHandler,
+																	   String id,
+																	   String serverHost,
+																	   String servicePrincipal,
+																	   TransportLayer transportLayer,
+																	   Subject subject) {
 
                 return new SaslClientAuthenticator(configs, callbackHandler, id, subject,
-                        servicePrincipal, serverHost, saslMechanism, true, transportLayer, time) {
-                    @Override
-                    protected SaslHandshakeRequest createSaslHandshakeRequest(short version) {
-                        return buildSaslHandshakeRequest(saslMechanism, (short) 0);
-                    }
-                    @Override
-                    protected void saslAuthenticateVersion(ApiVersionsResponse apiVersionsResponse) {
-                        // Don't set version so that headers are disabled
-                    }
-                };
+						servicePrincipal, serverHost, saslMechanism, true,
+						transportLayer, time, new LogContext()) {
+					@Override
+					protected SaslHandshakeRequest createSaslHandshakeRequest(short version) {
+						return buildSaslHandshakeRequest(saslMechanism, (short) 0);
+					}
+
+					@Override
+					protected void setSaslAuthenticateAndHandshakeVersions(ApiVersionsResponse apiVersionsResponse) {
+						// Don't set version so that headers are disabled
+					}
+				};
             }
         };
         clientChannelBuilder.configure(saslClientConfigs);
         this.selector = NetworkTestUtils.createSelector(clientChannelBuilder, time);
-        InetSocketAddress addr = new InetSocketAddress("127.0.0.1", server.port());
+		InetSocketAddress addr = new InetSocketAddress("localhost", server.port());
         selector.connect(node, addr, BUFFER_SIZE, BUFFER_SIZE);
     }
 
@@ -1774,40 +2057,40 @@ public class SaslAuthenticatorTest {
                 clientProtocol = SecurityProtocol.PLAINTEXT;
                 break;
             case SASL_SSL:
-                clientProtocol = SecurityProtocol.SSL;
-                break;
-            default:
-                throw new IllegalArgumentException("Server protocol " + securityProtocol + " is not SASL");
-        }
-        createClientConnection(clientProtocol, node);
-        NetworkTestUtils.waitForChannelReady(selector, node);
+				clientProtocol = SecurityProtocol.SSL;
+				break;
+			default:
+				throw new IllegalArgumentException("Server protocol " + securityProtocol + " is not SASL");
+		}
+		createClientConnection(clientProtocol, node);
+		NetworkTestUtils.waitForChannelReady(selector, node);
 
-        // Send ApiVersionsRequest and check response
-        ApiVersionsResponse versionsResponse = sendVersionRequestReceiveResponse(node);
-        assertEquals(ApiKeys.SASL_HANDSHAKE.oldestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_HANDSHAKE.id).minVersion);
-        assertEquals(ApiKeys.SASL_HANDSHAKE.latestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_HANDSHAKE.id).maxVersion);
-        assertEquals(ApiKeys.SASL_AUTHENTICATE.oldestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_AUTHENTICATE.id).minVersion);
-        assertEquals(ApiKeys.SASL_AUTHENTICATE.latestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_AUTHENTICATE.id).maxVersion);
+		// Send ApiVersionsRequest and check response
+		ApiVersionsResponse versionsResponse = sendVersionRequestReceiveResponse(node);
+		assertEquals(ApiKeys.SASL_HANDSHAKE.oldestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_HANDSHAKE.id).minVersion());
+		assertEquals(ApiKeys.SASL_HANDSHAKE.latestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_HANDSHAKE.id).maxVersion());
+		assertEquals(ApiKeys.SASL_AUTHENTICATE.oldestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_AUTHENTICATE.id).minVersion());
+		assertEquals(ApiKeys.SASL_AUTHENTICATE.latestVersion(), versionsResponse.apiVersion(ApiKeys.SASL_AUTHENTICATE.id).maxVersion());
 
-        // Send SaslHandshakeRequest and check response
-        SaslHandshakeResponse handshakeResponse = sendHandshakeRequestReceiveResponse(node, saslHandshakeVersion);
-        assertEquals(Collections.singletonList("PLAIN"), handshakeResponse.enabledMechanisms());
+		// Send SaslHandshakeRequest and check response
+		SaslHandshakeResponse handshakeResponse = sendHandshakeRequestReceiveResponse(node, saslHandshakeVersion);
+		assertEquals(Collections.singletonList("PLAIN"), handshakeResponse.enabledMechanisms());
 
-        // Complete manual authentication and check send/receive succeed
-        authenticateUsingSaslPlainAndCheckConnection(node, saslHandshakeVersion > 0);
-    }
+		// Complete manual authentication and check send/receive succeed
+		authenticateUsingSaslPlainAndCheckConnection(node, saslHandshakeVersion > 0);
+	}
 
     private void authenticateUsingSaslPlainAndCheckConnection(String node, boolean enableSaslAuthenticateHeader) throws Exception {
         // Authenticate using PLAIN username/password
-        String authString = "\u0000" + TestJaasConfig.USERNAME + "\u0000" + TestJaasConfig.PASSWORD;
-        ByteBuffer authBuf = ByteBuffer.wrap(authString.getBytes("UTF-8"));
+		String authString = "\u0000" + TestJaasConfig.USERNAME + "\u0000" + TestJaasConfig.PASSWORD;
+		ByteBuffer authBuf = ByteBuffer.wrap(Utils.utf8(authString));
         if (enableSaslAuthenticateHeader) {
             SaslAuthenticateRequestData data = new SaslAuthenticateRequestData().setAuthBytes(authBuf.array());
             SaslAuthenticateRequest request = new SaslAuthenticateRequest.Builder(data).build();
             sendKafkaRequestReceiveResponse(node, ApiKeys.SASL_AUTHENTICATE, request);
         } else {
-            selector.send(new NetworkSend(node, authBuf));
-            waitForResponse();
+			selector.send(new NetworkSend(node, ByteBufferSend.sizePrefixed(authBuf)));
+			waitForResponse();
         }
 
         // Check send/receive on the manually authenticated connection
@@ -1838,9 +2121,10 @@ public class SaslAuthenticatorTest {
         }
 
         String saslMechanism = (String) saslClientConfigs.get(SaslConfigs.SASL_MECHANISM);
-        this.channelBuilder = ChannelBuilders.clientChannelBuilder(securityProtocol, JaasContext.Type.CLIENT,
-                new TestSecurityConfig(clientConfigs), null, saslMechanism, time, true);
-        this.selector = NetworkTestUtils.createSelector(channelBuilder, time);
+		this.channelBuilder = ChannelBuilders.clientChannelBuilder(securityProtocol, JaasContext.Type.CLIENT,
+				new TestSecurityConfig(clientConfigs), null, saslMechanism, time,
+				true, new LogContext());
+		this.selector = NetworkTestUtils.createSelector(channelBuilder, time);
     }
 
     private NioEchoServer createEchoServer(SecurityProtocol securityProtocol) throws Exception {
@@ -1891,32 +2175,53 @@ public class SaslAuthenticatorTest {
             String mechanism, String expectedErrorMessage) throws Exception {
         ChannelState finalState = createAndCheckClientConnectionFailure(securityProtocol, node);
         Exception exception = finalState.exception();
-        assertTrue("Invalid exception class " + exception.getClass(), exception instanceof SaslAuthenticationException);
+		assertTrue(exception instanceof SaslAuthenticationException, "Invalid exception class " + exception.getClass());
         String expectedExceptionMessage = expectedErrorMessage != null ? expectedErrorMessage :
                 "Authentication failed during authentication due to invalid credentials with SASL mechanism " + mechanism;
         assertEquals(expectedExceptionMessage, exception.getMessage());
     }
 
-    private ChannelState createAndCheckClientConnectionFailure(SecurityProtocol securityProtocol, String node)
-            throws Exception {
-        try {
-            createClientConnection(securityProtocol, node);
-            ChannelState finalState = NetworkTestUtils.waitForChannelClose(selector, node, ChannelState.State.AUTHENTICATION_FAILED);
-            return finalState;
-        } finally {
-            closeClientConnectionIfNecessary();
-        }
-    }
+	private ChannelState createAndCheckClientConnectionFailure(SecurityProtocol securityProtocol, String node)
+			throws Exception {
+		try {
+			createClientConnection(securityProtocol, node);
+			ChannelState finalState = NetworkTestUtils.waitForChannelClose(selector, node, ChannelState.State.AUTHENTICATION_FAILED);
+			return finalState;
+		} finally {
+			closeClientConnectionIfNecessary();
+		}
+	}
 
-    private void checkAuthenticationAndReauthentication(SecurityProtocol securityProtocol, String node)
-            throws Exception {
-        try {
-            createClientConnection(securityProtocol, node);
-            checkClientConnection(node);
-            server.verifyAuthenticationMetrics(1, 0);
-            /*
-             * Now re-authenticate the connection. First we have to sleep long enough so
-             * that the next write will cause re-authentication, which we expect to succeed.
+	private void createAndCheckClientConnectionAndPrincipal(SecurityProtocol securityProtocol,
+															String node,
+															KafkaPrincipal expectedPrincipal) throws Exception {
+		try {
+			assertEquals(Collections.emptyList(), server.selector().channels());
+			createClientConnection(securityProtocol, node);
+			NetworkTestUtils.waitForChannelReady(selector, node);
+			assertEquals(expectedPrincipal, server.selector().channels().get(0).principal());
+			checkClientConnection(node);
+		} finally {
+			closeClientConnectionIfNecessary();
+			TestUtils.waitForCondition(() -> server.selector().channels().isEmpty(), "Channel not removed after disconnection");
+		}
+	}
+
+	private void createAndCheckSslAuthenticationFailure(SecurityProtocol securityProtocol, String node) throws Exception {
+		ChannelState finalState = createAndCheckClientConnectionFailure(securityProtocol, node);
+		Exception exception = finalState.exception();
+		assertEquals(SslAuthenticationException.class, exception.getClass());
+	}
+
+	private void checkAuthenticationAndReauthentication(SecurityProtocol securityProtocol, String node)
+			throws Exception {
+		try {
+			createClientConnection(securityProtocol, node);
+			checkClientConnection(node);
+			server.verifyAuthenticationMetrics(1, 0);
+			/*
+			 * Now re-authenticate the connection. First we have to sleep long enough so
+			 * that the next write will cause re-authentication, which we expect to succeed.
              */
             delay((long) (CONNECTIONS_MAX_REAUTH_MS_VALUE * 1.1));
             server.verifyReauthenticationMetrics(0, 0);
@@ -1928,8 +2233,8 @@ public class SaslAuthenticatorTest {
     }
 
     private AbstractResponse sendKafkaRequestReceiveResponse(String node, ApiKeys apiKey, AbstractRequest request) throws IOException {
-        RequestHeader header = new RequestHeader(apiKey, request.version(), "someclient", nextCorrelationId++);
-        Send send = request.toSend(node, header);
+		RequestHeader header = new RequestHeader(apiKey, request.version(), "someclient", nextCorrelationId++);
+		NetworkSend send = new NetworkSend(node, request.toSend(header));
         selector.send(send);
         ByteBuffer responseBuffer = waitForResponse();
         return NetworkClient.parseResponse(responseBuffer, header);
@@ -1945,7 +2250,7 @@ public class SaslAuthenticatorTest {
     private ApiVersionsResponse sendVersionRequestReceiveResponse(String node) throws Exception {
         ApiVersionsRequest handshakeRequest = createApiVersionsRequestV0();
         ApiVersionsResponse response =  (ApiVersionsResponse) sendKafkaRequestReceiveResponse(node, ApiKeys.API_VERSIONS, handshakeRequest);
-        assertEquals(Errors.NONE, response.error());
+		assertEquals(Errors.NONE.code(), response.data().errorCode());
         return response;
     }
 
@@ -1955,7 +2260,7 @@ public class SaslAuthenticatorTest {
             selector.poll(1000);
         } while (selector.completedReceives().isEmpty() && waitSeconds-- > 0);
         assertEquals(1, selector.completedReceives().size());
-        return selector.completedReceives().get(0).payload();
+		return selector.completedReceives().iterator().next().payload();
     }
 
     public static class TestServerCallbackHandler extends PlainServerCallbackHandler {
@@ -2226,8 +2531,9 @@ public class SaslAuthenticatorTest {
                 SecurityProtocol securityProtocol, ListenerName listenerName, boolean isInterBrokerListener,
                 String clientSaslMechanism, boolean handshakeRequestEnable, CredentialCache credentialCache,
                 DelegationTokenCache tokenCache, Time time) {
-            super(mode, jaasContexts, securityProtocol, listenerName, isInterBrokerListener, clientSaslMechanism,
-                    handshakeRequestEnable, credentialCache, tokenCache, time);
+			super(mode, jaasContexts, securityProtocol, listenerName, isInterBrokerListener, clientSaslMechanism,
+					handshakeRequestEnable, credentialCache, tokenCache, null, time, new LogContext(),
+					() -> ApiVersionsResponse.defaultApiVersionsResponse(ApiMessageType.ListenerType.ZK_BROKER));
         }
 
         @Override
@@ -2235,17 +2541,38 @@ public class SaslAuthenticatorTest {
                 AuthenticateCallbackHandler callbackHandler, String id, String serverHost, String servicePrincipal,
                 TransportLayer transportLayer, Subject subject) {
             if (++numInvocations == 1)
-                return new SaslClientAuthenticator(configs, callbackHandler, id, subject, servicePrincipal, serverHost,
-                        "DIGEST-MD5", true, transportLayer, time);
+				return new SaslClientAuthenticator(configs, callbackHandler, id, subject, servicePrincipal, serverHost,
+						"DIGEST-MD5", true, transportLayer, time, new LogContext());
             else
-                return new SaslClientAuthenticator(configs, callbackHandler, id, subject, servicePrincipal, serverHost,
-                        "PLAIN", true, transportLayer, time) {
-                    @Override
-                    protected SaslHandshakeRequest createSaslHandshakeRequest(short version) {
-                        return new SaslHandshakeRequest.Builder(
-                                new SaslHandshakeRequestData().setMechanism("PLAIN")).build(version);
-                    }
-                };
-        }
-    }
+				return new SaslClientAuthenticator(configs, callbackHandler, id, subject, servicePrincipal, serverHost,
+						"PLAIN", true, transportLayer, time, new LogContext()) {
+					@Override
+					protected SaslHandshakeRequest createSaslHandshakeRequest(short version) {
+						return new SaslHandshakeRequest.Builder(
+								new SaslHandshakeRequestData().setMechanism("PLAIN")).build(version);
+					}
+				};
+		}
+	}
+
+	public static class SaslSslPrincipalBuilder implements KafkaPrincipalBuilder {
+
+		@Override
+		public KafkaPrincipal build(AuthenticationContext context) {
+			SaslAuthenticationContext saslContext = (SaslAuthenticationContext) context;
+			assertTrue(saslContext.sslSession().isPresent());
+			String sslPrincipal;
+			try {
+				sslPrincipal = saslContext.sslSession().get().getPeerPrincipal().getName();
+			} catch (SSLPeerUnverifiedException e) {
+				sslPrincipal = KafkaPrincipal.ANONYMOUS.getName();
+			}
+			String saslPrincipal = saslContext.server().getAuthorizationID();
+			return saslSslPrincipal(saslPrincipal, sslPrincipal);
+		}
+
+		static KafkaPrincipal saslSslPrincipal(String saslPrincipal, String sslPrincipal) {
+			return new KafkaPrincipal(KafkaPrincipal.USER_TYPE, saslPrincipal + ":" + sslPrincipal);
+		}
+	}
 }
