@@ -18,7 +18,6 @@ package org.apache.kafka.connect.runtime.rest.resources;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import javax.ws.rs.core.HttpHeaders;
 import org.apache.kafka.common.config.Config;
 import org.apache.kafka.common.config.ConfigDef;
 import org.apache.kafka.common.config.ConfigDef.Importance;
@@ -52,6 +51,8 @@ import org.apache.kafka.connect.tools.MockSourceConnector;
 import org.apache.kafka.connect.tools.SchemaSourceConnector;
 import org.apache.kafka.connect.tools.VerifiableSinkConnector;
 import org.apache.kafka.connect.tools.VerifiableSourceConnector;
+import org.apache.kafka.connect.util.Callback;
+import org.easymock.Capture;
 import org.easymock.EasyMock;
 import org.easymock.IAnswer;
 import org.junit.Before;
@@ -64,6 +65,7 @@ import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
 
 import javax.ws.rs.BadRequestException;
+import javax.ws.rs.core.HttpHeaders;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Collections;
@@ -77,6 +79,7 @@ import java.util.TreeSet;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
 @RunWith(PowerMockRunner.class)
@@ -104,47 +107,47 @@ public class ConnectorPluginsResourceTest {
     private static final Set<PluginDesc<Connector>> CONNECTOR_PLUGINS = new TreeSet<>();
 
     static {
-        List<ConfigInfo> configs = new LinkedList<>();
-        List<ConfigInfo> partialConfigs = new LinkedList<>();
+		List<ConfigInfo> configs = new LinkedList<>();
+		List<ConfigInfo> partialConfigs = new LinkedList<>();
 
-        ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-        List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
-        List<ConfigValue> partialConnectorConfigValues = connectorConfigDef.validate(partialProps);
-        ConfigInfos result = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), connectorConfigValues, Collections.<String>emptyList());
-        ConfigInfos partialResult = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), partialConnectorConfigValues, Collections.<String>emptyList());
-        configs.addAll(result.values());
-        partialConfigs.addAll(partialResult.values());
+		ConfigDef connectorConfigDef = ConnectorConfig.configDef();
+		List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
+		List<ConfigValue> partialConnectorConfigValues = connectorConfigDef.validate(partialProps);
+		ConfigInfos result = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), connectorConfigValues, Collections.emptyList());
+		ConfigInfos partialResult = AbstractHerder.generateResult(ConnectorPluginsResourceTestConnector.class.getName(), connectorConfigDef.configKeys(), partialConnectorConfigValues, Collections.emptyList());
+		configs.addAll(result.values());
+		partialConfigs.addAll(partialResult.values());
 
-        ConfigKeyInfo configKeyInfo = new ConfigKeyInfo("test.string.config", "STRING", true, null, "HIGH", "Test configuration for string type.", null, -1, "NONE", "test.string.config", Collections.<String>emptyList());
-        ConfigValueInfo configValueInfo = new ConfigValueInfo("test.string.config", "testString", Collections.<String>emptyList(), Collections.<String>emptyList(), true);
-        ConfigInfo configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
-        configs.add(configInfo);
-        partialConfigs.add(configInfo);
+		ConfigKeyInfo configKeyInfo = new ConfigKeyInfo("test.string.config", "STRING", true, null, "HIGH", "Test configuration for string type.", null, -1, "NONE", "test.string.config", Collections.emptyList());
+		ConfigValueInfo configValueInfo = new ConfigValueInfo("test.string.config", "testString", Collections.emptyList(), Collections.emptyList(), true);
+		ConfigInfo configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
+		configs.add(configInfo);
+		partialConfigs.add(configInfo);
 
-        configKeyInfo = new ConfigKeyInfo("test.int.config", "INT", true, null, "MEDIUM", "Test configuration for integer type.", "Test", 1, "MEDIUM", "test.int.config", Collections.<String>emptyList());
-        configValueInfo = new ConfigValueInfo("test.int.config", "1", Arrays.asList("1", "2", "3"), Collections.<String>emptyList(), true);
-        configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
-        configs.add(configInfo);
-        partialConfigs.add(configInfo);
+		configKeyInfo = new ConfigKeyInfo("test.int.config", "INT", true, null, "MEDIUM", "Test configuration for integer type.", "Test", 1, "MEDIUM", "test.int.config", Collections.emptyList());
+		configValueInfo = new ConfigValueInfo("test.int.config", "1", Arrays.asList("1", "2", "3"), Collections.emptyList(), true);
+		configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
+		configs.add(configInfo);
+		partialConfigs.add(configInfo);
 
-        configKeyInfo = new ConfigKeyInfo("test.string.config.default", "STRING", false, "", "LOW", "Test configuration with default value.", null, -1, "NONE", "test.string.config.default", Collections.<String>emptyList());
-        configValueInfo = new ConfigValueInfo("test.string.config.default", "", Collections.<String>emptyList(), Collections.<String>emptyList(), true);
-        configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
-        configs.add(configInfo);
-        partialConfigs.add(configInfo);
+		configKeyInfo = new ConfigKeyInfo("test.string.config.default", "STRING", false, "", "LOW", "Test configuration with default value.", null, -1, "NONE", "test.string.config.default", Collections.emptyList());
+		configValueInfo = new ConfigValueInfo("test.string.config.default", "", Collections.emptyList(), Collections.emptyList(), true);
+		configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
+		configs.add(configInfo);
+		partialConfigs.add(configInfo);
 
-        configKeyInfo = new ConfigKeyInfo("test.list.config", "LIST", true, null, "HIGH", "Test configuration for list type.", "Test", 2, "LONG", "test.list.config", Collections.<String>emptyList());
-        configValueInfo = new ConfigValueInfo("test.list.config", "a,b", Arrays.asList("a", "b", "c"), Collections.<String>emptyList(), true);
-        configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
-        configs.add(configInfo);
-        partialConfigs.add(configInfo);
+		configKeyInfo = new ConfigKeyInfo("test.list.config", "LIST", true, null, "HIGH", "Test configuration for list type.", "Test", 2, "LONG", "test.list.config", Collections.emptyList());
+		configValueInfo = new ConfigValueInfo("test.list.config", "a,b", Arrays.asList("a", "b", "c"), Collections.emptyList(), true);
+		configInfo = new ConfigInfo(configKeyInfo, configValueInfo);
+		configs.add(configInfo);
+		partialConfigs.add(configInfo);
 
-        CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), ERROR_COUNT, Collections.singletonList("Test"), configs);
-        PARTIAL_CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), PARTIAL_CONFIG_ERROR_COUNT, Collections.singletonList("Test"), partialConfigs);
+		CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), ERROR_COUNT, Collections.singletonList("Test"), configs);
+		PARTIAL_CONFIG_INFOS = new ConfigInfos(ConnectorPluginsResourceTestConnector.class.getName(), PARTIAL_CONFIG_ERROR_COUNT, Collections.singletonList("Test"), partialConfigs);
 
-        Class<?>[] abstractConnectorClasses = {
-            Connector.class,
-            SourceConnector.class,
+		Class<?>[] abstractConnectorClasses = {
+				Connector.class,
+				SourceConnector.class,
             SinkConnector.class
         };
 
@@ -198,29 +201,32 @@ public class ConnectorPluginsResourceTest {
 
     @Test
     public void testValidateConfigWithSingleErrorDueToMissingConnectorClassname() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(partialProps));
+		Capture<Callback<ConfigInfos>> configInfosCallback = EasyMock.newCapture();
+		herder.validateConnectorConfig(EasyMock.eq(partialProps), EasyMock.capture(configInfosCallback), EasyMock.anyBoolean());
 
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
-            ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-            List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(partialProps);
+		PowerMock.expectLastCall().andAnswer((IAnswer<Void>) () -> {
+			ConfigDef connectorConfigDef = ConnectorConfig.configDef();
+			List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(partialProps);
 
-            Connector connector = new ConnectorPluginsResourceTestConnector();
-            Config config = connector.validate(partialProps);
-            ConfigDef configDef = connector.config();
-            Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
-            List<ConfigValue> configValues = config.configValues();
+			Connector connector = new ConnectorPluginsResourceTestConnector();
+			Config config = connector.validate(partialProps);
+			ConfigDef configDef = connector.config();
+			Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
+			List<ConfigValue> configValues = config.configValues();
 
-            Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
-            resultConfigKeys.putAll(connectorConfigDef.configKeys());
-            configValues.addAll(connectorConfigValues);
+			Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
+			resultConfigKeys.putAll(connectorConfigDef.configKeys());
+			configValues.addAll(connectorConfigValues);
 
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
-            );
-        });
+			ConfigInfos configInfos = AbstractHerder.generateResult(
+					ConnectorPluginsResourceTestConnector.class.getName(),
+					resultConfigKeys,
+					configValues,
+					Collections.singletonList("Test")
+			);
+			configInfosCallback.getValue().onCompletion(null, configInfos);
+			return null;
+		});
 
         PowerMock.replayAll();
 
@@ -243,29 +249,32 @@ public class ConnectorPluginsResourceTest {
 
     @Test
     public void testValidateConfigWithSimpleName() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
+		Capture<Callback<ConfigInfos>> configInfosCallback = EasyMock.newCapture();
+		herder.validateConnectorConfig(EasyMock.eq(props), EasyMock.capture(configInfosCallback), EasyMock.anyBoolean());
 
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
-            ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-            List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
+		PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
+			ConfigDef connectorConfigDef = ConnectorConfig.configDef();
+			List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
 
-            Connector connector = new ConnectorPluginsResourceTestConnector();
-            Config config = connector.validate(props);
-            ConfigDef configDef = connector.config();
-            Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
-            List<ConfigValue> configValues = config.configValues();
+			Connector connector = new ConnectorPluginsResourceTestConnector();
+			Config config = connector.validate(props);
+			ConfigDef configDef = connector.config();
+			Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
+			List<ConfigValue> configValues = config.configValues();
 
-            Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
-            resultConfigKeys.putAll(connectorConfigDef.configKeys());
-            configValues.addAll(connectorConfigValues);
+			Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
+			resultConfigKeys.putAll(connectorConfigDef.configKeys());
+			configValues.addAll(connectorConfigValues);
 
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
-            );
-        });
+			ConfigInfos configInfos = AbstractHerder.generateResult(
+					ConnectorPluginsResourceTestConnector.class.getName(),
+					resultConfigKeys,
+					configValues,
+					Collections.singletonList("Test")
+			);
+			configInfosCallback.getValue().onCompletion(null, configInfos);
+			return null;
+		});
 
         PowerMock.replayAll();
 
@@ -284,123 +293,70 @@ public class ConnectorPluginsResourceTest {
 
     @Test
     public void testValidateConfigWithAlias() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
+		Capture<Callback<ConfigInfos>> configInfosCallback = EasyMock.newCapture();
+		herder.validateConnectorConfig(EasyMock.eq(props), EasyMock.capture(configInfosCallback), EasyMock.anyBoolean());
 
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
-            ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-            List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
+		PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
+			ConfigDef connectorConfigDef = ConnectorConfig.configDef();
+			List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
 
-            Connector connector = new ConnectorPluginsResourceTestConnector();
-            Config config = connector.validate(props);
-            ConfigDef configDef = connector.config();
-            Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
-            List<ConfigValue> configValues = config.configValues();
+			Connector connector = new ConnectorPluginsResourceTestConnector();
+			Config config = connector.validate(props);
+			ConfigDef configDef = connector.config();
+			Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
+			List<ConfigValue> configValues = config.configValues();
 
-            Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
-            resultConfigKeys.putAll(connectorConfigDef.configKeys());
-            configValues.addAll(connectorConfigValues);
+			Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
+			resultConfigKeys.putAll(connectorConfigDef.configKeys());
+			configValues.addAll(connectorConfigValues);
 
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
-            );
-        });
+			ConfigInfos configInfos = AbstractHerder.generateResult(
+					ConnectorPluginsResourceTestConnector.class.getName(),
+					resultConfigKeys,
+					configValues,
+					Collections.singletonList("Test")
+			);
+			configInfosCallback.getValue().onCompletion(null, configInfos);
+			return null;
+		});
 
         PowerMock.replayAll();
 
         // make a request to connector-plugins resource using a valid alias.
         ConfigInfos configInfos = connectorPluginsResource.validateConfigs(
             "ConnectorPluginsResourceTest",
-            props
-        );
-        assertEquals(CONFIG_INFOS.name(), configInfos.name());
-        assertEquals(0, configInfos.errorCount());
-        assertEquals(CONFIG_INFOS.groups(), configInfos.groups());
-        assertEquals(new HashSet<>(CONFIG_INFOS.values()), new HashSet<>(configInfos.values()));
+				props
+		);
+		assertEquals(CONFIG_INFOS.name(), configInfos.name());
+		assertEquals(0, configInfos.errorCount());
+		assertEquals(CONFIG_INFOS.groups(), configInfos.groups());
+		assertEquals(new HashSet<>(CONFIG_INFOS.values()), new HashSet<>(configInfos.values()));
 
-        PowerMock.verifyAll();
-    }
+		PowerMock.verifyAll();
+	}
 
-    @Test(expected = BadRequestException.class)
-    public void testValidateConfigWithNonExistentName() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
+	@Test
+	public void testValidateConfigWithNonExistentName() {
+		// make a request to connector-plugins resource using a non-loaded connector with the same
+		// simple name but different package.
+		String customClassname = "com.custom.package."
+				+ ConnectorPluginsResourceTestConnector.class.getSimpleName();
+		assertThrows(BadRequestException.class, () -> connectorPluginsResource.validateConfigs(customClassname, props));
+	}
 
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
-            ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-            List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
+	@Test
+	public void testValidateConfigWithNonExistentAlias() {
+		assertThrows(BadRequestException.class, () -> connectorPluginsResource.validateConfigs("ConnectorPluginsTest", props));
+	}
 
-            Connector connector = new ConnectorPluginsResourceTestConnector();
-            Config config = connector.validate(props);
-            ConfigDef configDef = connector.config();
-            Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
-            List<ConfigValue> configValues = config.configValues();
-
-            Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
-            resultConfigKeys.putAll(connectorConfigDef.configKeys());
-            configValues.addAll(connectorConfigValues);
-
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
-            );
-        });
-
-        PowerMock.replayAll();
-
-        // make a request to connector-plugins resource using a non-loaded connector with the same
-        // simple name but different package.
-        String customClassname = "com.custom.package."
-            + ConnectorPluginsResourceTestConnector.class.getSimpleName();
-        connectorPluginsResource.validateConfigs(customClassname, props);
-
-        PowerMock.verifyAll();
-    }
-
-    @Test(expected = BadRequestException.class)
-    public void testValidateConfigWithNonExistentAlias() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
-
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
-            ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-            List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
-
-            Connector connector = new ConnectorPluginsResourceTestConnector();
-            Config config = connector.validate(props);
-            ConfigDef configDef = connector.config();
-            Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
-            List<ConfigValue> configValues = config.configValues();
-
-            Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
-            resultConfigKeys.putAll(connectorConfigDef.configKeys());
-            configValues.addAll(connectorConfigValues);
-
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
-            );
-        });
-
-        PowerMock.replayAll();
-
-        connectorPluginsResource.validateConfigs("ConnectorPluginsTest", props);
-
-        PowerMock.verifyAll();
-    }
-
-    @Test
-    public void testListConnectorPlugins() throws Exception {
-        expectPlugins();
-        Set<ConnectorPluginInfo> connectorPlugins = new HashSet<>(connectorPluginsResource.listConnectorPlugins());
-        assertFalse(connectorPlugins.contains(newInfo(Connector.class, "0.0")));
-        assertFalse(connectorPlugins.contains(newInfo(SourceConnector.class, "0.0")));
-        assertFalse(connectorPlugins.contains(newInfo(SinkConnector.class, "0.0")));
-        assertFalse(connectorPlugins.contains(newInfo(VerifiableSourceConnector.class)));
+	@Test
+	public void testListConnectorPlugins() throws Exception {
+		expectPlugins();
+		Set<ConnectorPluginInfo> connectorPlugins = new HashSet<>(connectorPluginsResource.listConnectorPlugins());
+		assertFalse(connectorPlugins.contains(newInfo(Connector.class, "0.0")));
+		assertFalse(connectorPlugins.contains(newInfo(SourceConnector.class, "0.0")));
+		assertFalse(connectorPlugins.contains(newInfo(SinkConnector.class, "0.0")));
+		assertFalse(connectorPlugins.contains(newInfo(VerifiableSourceConnector.class)));
         assertFalse(connectorPlugins.contains(newInfo(VerifiableSinkConnector.class)));
         assertFalse(connectorPlugins.contains(newInfo(MockSourceConnector.class)));
         assertFalse(connectorPlugins.contains(newInfo(MockSinkConnector.class)));
@@ -471,17 +427,16 @@ public class ConnectorPluginsResourceTest {
     }
 
     public static class MockConnectorPluginDesc extends PluginDesc<Connector> {
-        public MockConnectorPluginDesc(Class<? extends Connector> klass, String version)
-                throws Exception {
-            super(klass, version, new MockPluginClassLoader(null, new URL[0]));
-        }
+		public MockConnectorPluginDesc(Class<? extends Connector> klass, String version) {
+			super(klass, version, new MockPluginClassLoader(null, new URL[0]));
+		}
 
         public MockConnectorPluginDesc(Class<? extends Connector> klass) throws Exception {
             super(
-                    klass,
-                    klass.newInstance().version(),
-                    new MockPluginClassLoader(null, new URL[0])
-            );
+					klass,
+					klass.getConstructor().newInstance().version(),
+					new MockPluginClassLoader(null, new URL[0])
+			);
         }
     }
 
