@@ -16,8 +16,8 @@
  */
 package org.apache.kafka.streams.state.internals;
 
+import org.apache.kafka.streams.processor.internals.testutil.LogCaptureAppender;
 import org.easymock.EasyMockRunner;
-import org.easymock.Mock;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.rocksdb.AbstractCompactionFilter;
@@ -26,6 +26,7 @@ import org.rocksdb.AbstractCompactionFilterFactory;
 import org.rocksdb.AccessHint;
 import org.rocksdb.BuiltinComparator;
 import org.rocksdb.ColumnFamilyOptions;
+import org.rocksdb.CompactionOptionsFIFO;
 import org.rocksdb.CompactionPriority;
 import org.rocksdb.CompactionStyle;
 import org.rocksdb.ComparatorOptions;
@@ -53,9 +54,11 @@ import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 
+import static org.easymock.EasyMock.mock;
 import static org.easymock.EasyMock.replay;
 import static org.easymock.EasyMock.reset;
 import static org.easymock.EasyMock.verify;
+import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.matchesPattern;
@@ -82,11 +85,6 @@ public class RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapterTest {
         }
     };
 
-    @Mock
-    private DBOptions dbOptions;
-    @Mock
-    private ColumnFamilyOptions columnFamilyOptions;
-
     @Test
     public void shouldOverwriteAllOptionsMethods() throws Exception {
         for (final Method method : Options.class.getMethods()) {
@@ -110,18 +108,19 @@ public class RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapterTest {
     }
 
     private void verifyDBOptionsMethodCall(final Method method) throws Exception {
-        final RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter optionsFacadeDbOptions
-            = new RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter(dbOptions, new ColumnFamilyOptions());
+		final DBOptions mockedDbOptions = mock(DBOptions.class);
+		final RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter optionsFacadeDbOptions
+				= new RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter(mockedDbOptions, new ColumnFamilyOptions());
 
         final Object[] parameters = getDBOptionsParameters(method.getParameterTypes());
 
         try {
-            reset(dbOptions);
-            replay(dbOptions);
-            method.invoke(optionsFacadeDbOptions, parameters);
-            verify();
-            fail("Should have called DBOptions." + method.getName() + "()");
-        } catch (final InvocationTargetException undeclaredMockMethodCall) {
+			reset(mockedDbOptions);
+			replay(mockedDbOptions);
+			method.invoke(optionsFacadeDbOptions, parameters);
+			verify();
+			fail("Should have called DBOptions." + method.getName() + "()");
+		} catch (final InvocationTargetException undeclaredMockMethodCall) {
             assertThat(undeclaredMockMethodCall.getCause(), instanceOf(AssertionError.class));
             assertThat(undeclaredMockMethodCall.getCause().getMessage().trim(),
                 matchesPattern("Unexpected method call DBOptions\\." + method.getName() + "((.*\n*)*):"));
@@ -176,7 +175,7 @@ public class RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapterTest {
                     parameters[i] = new WriteBufferManager(1L, new LRUCache(1L));
                     break;
                 default:
-                    parameters[i] = parameterTypes[i].newInstance();
+					parameters[i] = parameterTypes[i].getConstructor().newInstance();
             }
         }
 
@@ -196,18 +195,19 @@ public class RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapterTest {
     }
 
     private void verifyColumnFamilyOptionsMethodCall(final Method method) throws Exception {
-        final RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter optionsFacadeColumnFamilyOptions
-            = new RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter(new DBOptions(), columnFamilyOptions);
+		final ColumnFamilyOptions mockedColumnFamilyOptions = mock(ColumnFamilyOptions.class);
+		final RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter optionsFacadeColumnFamilyOptions
+				= new RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter(new DBOptions(), mockedColumnFamilyOptions);
 
         final Object[] parameters = getColumnFamilyOptionsParameters(method.getParameterTypes());
 
         try {
-            reset(columnFamilyOptions);
-            replay(columnFamilyOptions);
-            method.invoke(optionsFacadeColumnFamilyOptions, parameters);
-            verify();
-            fail("Should have called ColumnFamilyOptions." + method.getName() + "()");
-        } catch (final InvocationTargetException undeclaredMockMethodCall) {
+			reset(mockedColumnFamilyOptions);
+			replay(mockedColumnFamilyOptions);
+			method.invoke(optionsFacadeColumnFamilyOptions, parameters);
+			verify();
+			fail("Should have called ColumnFamilyOptions." + method.getName() + "()");
+		} catch (final InvocationTargetException undeclaredMockMethodCall) {
             assertThat(undeclaredMockMethodCall.getCause(), instanceOf(AssertionError.class));
             assertThat(undeclaredMockMethodCall.getCause().getMessage().trim(),
                 matchesPattern("Unexpected method call ColumnFamilyOptions\\." + method.getName() +  "(.*)"));
@@ -241,17 +241,17 @@ public class RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapterTest {
                     parameters[i] = new RemoveEmptyValueCompactionFilter();
                     break;
                 case "org.rocksdb.AbstractCompactionFilterFactory":
-                    parameters[i] = new AbstractCompactionFilterFactory() {
+					parameters[i] = new AbstractCompactionFilterFactory<AbstractCompactionFilter<?>>() {
 
-                        @Override
-                        public AbstractCompactionFilter<?> createCompactionFilter(final Context context) {
-                            return null;
-                        }
+						@Override
+						public AbstractCompactionFilter<?> createCompactionFilter(final Context context) {
+							return null;
+						}
 
-                        @Override
-                        public String name() {
-                            return "AbstractCompactionFilterFactory";
-                        }
+						@Override
+						public String name() {
+							return "AbstractCompactionFilterFactory";
+						}
                     };
                     break;
                 case "org.rocksdb.AbstractComparator":
@@ -275,14 +275,54 @@ public class RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapterTest {
                 case "org.rocksdb.MergeOperator":
                     parameters[i] = new StringAppendOperator();
                     break;
-                case "org.rocksdb.TableFormatConfig":
-                    parameters[i] = new PlainTableConfig();
-                    break;
-                default:
-                    parameters[i] = parameterTypes[i].newInstance();
-            }
-        }
+				case "org.rocksdb.TableFormatConfig":
+					parameters[i] = new PlainTableConfig();
+					break;
+				default:
+					parameters[i] = parameterTypes[i].getConstructor().newInstance();
+			}
+		}
 
-        return parameters;
-    }
+		return parameters;
+	}
+
+	@Test
+	public void shouldWarnThanMethodCompactionOptionsFIFOSetTtlWillBeRemoved() {
+		final DBOptions mockedDbOptions = mock(DBOptions.class);
+		final RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter optionsFacadeDbOptions
+				= new RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter(mockedDbOptions, new ColumnFamilyOptions());
+
+		try (final LogCaptureAppender appender =
+					 LogCaptureAppender.createAndRegister(RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter.class)) {
+			optionsFacadeDbOptions.setCompactionOptionsFIFO(new CompactionOptionsFIFO());
+
+			assertThat(
+					appender.getMessages(),
+					hasItem("RocksDB's version will be bumped to version 6+ via KAFKA-8897 in a future release." +
+							" If you use `org.rocksdb.CompactionOptionsFIFO#setTtl(long)` or `#ttl()` you will need to rewrite" +
+							" your code after KAFKA-8897 is resolved and set TTL via `org.rocksdb.Options`" +
+							" (or `org.rocksdb.ColumnFamilyOptions`).")
+			);
+		}
+	}
+
+	@Test
+	public void shouldWarnThanMethodCompactionOptionsFIFOTtlWillBeRemoved() {
+		final DBOptions mockedDbOptions = mock(DBOptions.class);
+		final RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter optionsFacadeDbOptions
+				= new RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter(mockedDbOptions, new ColumnFamilyOptions());
+
+		try (final LogCaptureAppender appender =
+					 LogCaptureAppender.createAndRegister(RocksDBGenericOptionsToDbOptionsColumnFamilyOptionsAdapter.class)) {
+			optionsFacadeDbOptions.compactionOptionsFIFO();
+
+			assertThat(
+					appender.getMessages(),
+					hasItem("RocksDB's version will be bumped to version 6+ via KAFKA-8897 in a future release." +
+							" If you use `org.rocksdb.CompactionOptionsFIFO#setTtl(long)` or `#ttl()` you will need to rewrite" +
+							" your code after KAFKA-8897 is resolved and set TTL via `org.rocksdb.Options`" +
+							" (or `org.rocksdb.ColumnFamilyOptions`).")
+			);
+		}
+	}
 }
